Add comments and explanations to earthquake prediction script

--- a/src/earthquake_prediction.ipynb
+++ b/src/earthquake_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9edc9548",
    "metadata": {},
    "outputs": [
@@ -29,33 +29,46 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import pickle\n",
-    "from sklearn import metrics\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "# Import required libraries\n",
+    "import numpy as np                            # For numerical operations and array handling\n",
+    "import pandas as pd                           # For data loading and manipulation\n",
+    "from sklearn.model_selection import train_test_split  # To split data into training and test sets\n",
+    "import pickle                                 # To save/load trained models (not used in this snippet yet)\n",
+    "from sklearn import metrics                   # For evaluating model performance\n",
+    "from sklearn.ensemble import RandomForestClassifier  # The classifier we'll use\n",
     "\n",
-    "\n",
+    "# Load the dataset from a CSV file into a pandas DataFrame\n",
     "data = pd.read_csv(\"C:/Users/98938/Desktop/earthquake-prediction/data/dataset.csv\")\n",
     "\n",
-    "\n",
-    "\n",
+    "# Convert the DataFrame to a NumPy array for easier slicing\n",
     "data = np.array(data)\n",
-    "print(data)\n",
-    "X = data[:, 0:-1]\n",
-    "y = data[:, -1]\n",
+    "print(data)  # Print the entire dataset to check its content\n",
+    "\n",
+    "# Split data into features (X) and labels (y)\n",
+    "X = data[:, 0:-1]        # All columns except the last one are features\n",
+    "y = data[:, -1]          # The last column is the target label\n",
+    "\n",
+    "# Convert data types to integer (important if data is in string/float format)\n",
     "y = y.astype('int')\n",
     "X = X.astype('int')\n",
     "\n",
+    "# Split data into training and test sets (80% train, 20% test)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
     "\n",
-    "print(X_train,y_train)\n",
+    "# Print training data to verify the split\n",
+    "print(X_train, y_train)\n",
+    "\n",
+    "# Initialize the Random Forest Classifier\n",
     "rfc = RandomForestClassifier()\n",
+    "\n",
+    "# Train the classifier on the training data\n",
     "rfc.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict labels for the test set\n",
     "y_pred = rfc.predict(X_test)\n",
     "\n",
-    "print(metrics.accuracy_score(y_test, y_pred))"
+    "# Calculate and print the accuracy of the model on the test set\n",
+    "print(metrics.accuracy_score(y_test, y_pred))\n"
    ]
   },
   {
